Implement hashtag suggestions in ConversationPage.

--- a/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/HostPage.xaml
@@ -29,6 +29,17 @@
         
         <Frame Grid.Row="1"
                x:Name="MainFrame"/>
+
+        <Popup x:Name="SuggestionsPopup"
+               Grid.Row="0"
+               Grid.RowSpan="2"
+               Canvas.ZIndex="1"
+               IsOpen="False"
+               VerticalAlignment="Top"
+               Height="66">
+            <controls:SuggestionsPopupContent />
+        </Popup>
+        
     </Grid>  
 
 </Page>
