--- a/Mirko_v2/Mirko_v2.WindowsPhone/Pages/AttachmentPage.xaml
+++ b/Mirko_v2/Mirko_v2.WindowsPhone/Pages/AttachmentPage.xaml
@@ -1,21 +1,18 @@
-﻿<Page
-    x:Class="Mirko_v2.AddAttachmentPage"
+﻿<UserControl
+    x:Class="Mirko_v2.Pages.AttachmentPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mirko_v2"
+    xmlns:local="using:Mirko_v2.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    xmlns:controls="using:Mirko_v2.Controls"
-    xmlns:utils="using:Mirko_v2.Utils"
-    xmlns:mvvm="using:GalaSoft.MvvmLight.Command"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    utils:PageOrientation.SupportedOrientations="Portrait">
+    d:DesignHeight="300"
+    d:DesignWidth="400"
+    DataContext="{Binding NewEntry, Mode=OneWay, Source={StaticResource Locator}}">
 
     <Grid x:Name="LayoutRoot"
-          Margin="0,25.6,0,0"
           Background="{StaticResource PivotHeaderBackground}">
 
         <Grid.RowDefinitions>
@@ -24,24 +21,21 @@
         </Grid.RowDefinitions>
 
         <!-- Title Panel -->
-        <StackPanel Grid.Row="0" >
-            <controls:AppHeader Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+        <TextBlock Text="dodaj załącznik"
+                   Grid.Row="0"
+                   Margin="18,-6.5,0,26.5" 
+                   Style="{ThemeResource HeaderTextBlockStyle}" 
+                   CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"
+                   FontSize="34"
+                   Foreground="Gray">
 
-            <TextBlock Text="dodaj załącznik"
-                       Margin="18,-6.5,0,26.5" 
-                       Style="{ThemeResource HeaderTextBlockStyle}" 
-                       CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"
-                       FontSize="34"
-                       Foreground="Gray">
+            <TextBlock.Transitions>
+                <TransitionCollection>
+                    <EdgeUIThemeTransition Edge="Right" />
+                </TransitionCollection>
+            </TextBlock.Transitions>
 
-                <TextBlock.Transitions>
-                    <TransitionCollection>
-                        <EdgeUIThemeTransition Edge="Right" />
-                    </TransitionCollection>
-                </TextBlock.Transitions>
-
-            </TextBlock>
-        </StackPanel>
+        </TextBlock>
 
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
@@ -59,10 +53,10 @@
             <TextBox x:Name="URLTextBox"
                      Grid.Row="0"
                      PlaceholderText="link..."
-                     Text="{Binding NewEntry.Embed, Mode=TwoWay}"
+                     Text="{Binding Data.Embed, Mode=TwoWay}"
                      Style="{StaticResource TextBoxStyle1}"
                      InputScope="Url" />
-            
+
             <StackPanel Grid.Row="1"
                         Margin="0,20,0,0">
                 <TextBlock Style="{StaticResource ListViewItemTextBlockStyle}"
@@ -73,27 +67,10 @@
                             <core:InvokeCommandAction Command="{Binding OpenPicker}" />
                         </core:EventTriggerBehavior>
                     </i:Interaction.Behaviors>
-                    
+
                 </TextBlock>
             </StackPanel>
 
         </Grid>
     </Grid>
-
-    <Page.BottomAppBar>
-        <CommandBar>
-            <AppBarButton Icon="Accept"
-                          Label="ok"
-                          IsEnabled="{Binding NewEntry.Embed.Length, Converter={StaticResource CountToBool}}">
-                
-                <i:Interaction.Behaviors>
-                    <core:EventTriggerBehavior EventName="Click">
-                        <core:InvokeCommandAction Command="{Binding AcceptPressed}" />
-                    </core:EventTriggerBehavior>
-                </i:Interaction.Behaviors>
-                
-            </AppBarButton>
-        </CommandBar>
-    </Page.BottomAppBar>
-</Page>
-
+</UserControl>
